--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,8 @@
 html, body {
   margin: 0;
-  padding: 0;
   color: #524f4f;
   background-image: url("../img/leaves.png");
-  padding: 2.5em;
+  padding: 0.5em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,10 +15,9 @@ blockquote {
 /* button */
 .button {
   width: 180px;
-  padding: 1em;
+  padding: 0.5em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   border-radius: 1.5em;
-  color: aliceblue;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
@@ -27,9 +25,16 @@ blockquote {
   outline: none;
 }
 
+.active {
+  background: #739f3d;
+  border: solid 0.1em #739f3d;
+  color: #C9FFBF;
+}
+
 .ghost {
-  color: #f3eded;
-  background: #ee693f;
+  border: solid 0.1em #f0f1dc;
+  background: #f0f1dc;
+  color: #739f3d;
 }
 
 .button:hover {
@@ -38,11 +43,11 @@ blockquote {
 
 /* typography */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
+  font-weight: 900;
   font-family: "Adamina", Arial, Helvetica, sans-serif;
 }
 
-p, li, label, blockquote {
+p, li, label, blockquote, button {
   font-weight: 400;
   font-family: "Dosis", Arial, Helvetica, sans-serif;
   font-size: 18px; 
@@ -194,14 +199,10 @@ input[type=radio] {
   width: 120px;
 }
 
-.active {
-  background: #f69454;
-}
-
 #left {
-background: #FFEEEE;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #DDEFBB, #FFEEEE);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #DDEFBB, #FFEEEE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #C9FFBF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #e79f6f, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #e79f6f, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   flex: 1;
   padding: 2.5em;
@@ -213,7 +214,6 @@ background: linear-gradient(to right, #DDEFBB, #FFEEEE); /* W3C, IE 10+/ Edge, F
 
 #right {
   background: #f8f6f6;
-  border-left: solid 0.2em #f69454;
   flex: 2;
 }
 
@@ -230,9 +230,21 @@ section {
   border: 0;
 }
 
-.sub-heading {
-  font-size: 24px;
+.styled:nth-last-child(4) {
+  display: none;
+}
+
+.main-heading {
+  font-size: 36px;
   color: #ee693f;
+}
+
+.main-heading:after {
+  display: block;
+  content: "";
+  width: 35px;
+  border-bottom: solid 0.2em #739f3d;
+  border-radius: 0.2em;
 }
 
 .text-center {
@@ -248,6 +260,10 @@ section {
 
 #customize {
   padding: 0.5em;
+}
+
+.green, .quotation-mark {
+  color: #739f3d;
 }
 
 .quote {
