--- a/css/custom.css
+++ b/css/custom.css
@@ -14,11 +14,12 @@ blockquote {
 
 /* button */
 .button {
-  width: 180px;
+  width: 150px;
   padding: 0.5em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   border-radius: 1.5em;
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin: 0.5em;
 }
 
 .button:focus {
@@ -34,7 +35,7 @@ blockquote {
 .ghost {
   border: solid 0.1em #f0f1dc;
   background: #f0f1dc;
-  color: #739f3d;
+  color: #ee693f;
 }
 
 .button:hover {
@@ -201,8 +202,8 @@ input[type=radio] {
 
 #left {
 background: #C9FFBF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #e79f6f, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #e79f6f, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to right, #e78e52, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #e78e52, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   flex: 1;
   padding: 2.5em;
@@ -262,11 +263,20 @@ section {
   padding: 0.5em;
 }
 
-.green, .quotation-mark {
+#quoteType {
   color: #739f3d;
+  text-align: center;
 }
 
 .quote {
   margin-bottom: 0.5em;
   padding: 0.5em;
+}
+
+.sub-heading {
+  color: #0d0d0d;
+}
+
+.info {
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
