--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -1,19 +1,34 @@
+/* color palette */
 $background-color: #ff13fb;
 $primary-color: #739f3d;
+$primary-color-dark: #54831c;
 $secondary-color: #ee693f;
-$accent-color: #739f3d;
+$accent-color: #f69454;
+$white: #fff;
+$space-white: #f0f1dc;
+$light-gray: #efedfc;
+
+/* white space */
 $padding: 2.5em;
+$margin: 0.5em;
+
+/* borders */
 $border-radius: 0.5em;
 $round: 50%;
-$margin: 0.5em;
 $outline-none: none;
+$no-border: 0;
+
+/* typography */
 $font-size: 18px;
-$primary-font: "Adamina";
-$secondary-font: "Dosis";
+$primary-font: "Adamina", Arial, Helvetica, sans-serif;
+$secondary-font: "Dosis", Arial, Helvetica, sans-serif;
 $font-color: #515353;
 $headings-color: #0d0d0d;
-$no-border: 0;
 $text-center: center;
+
+/* buttons */
 $button-width: 150px;
 $default-cursor: auto;
+
+/* UI controls */
 $secondary-cursor: pointer;
