--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -56,13 +56,8 @@ h4 {
 }
 
 .info {
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  background: #fcfdfe;
-  padding: 1.5em;
-  border-radius: 0.2em;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   text-align: center;
-  border-top: solid 0.3em #739f3d;
+  color: $white;
 }
 
 legend {
