--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -417,13 +417,8 @@ h4 {
 }
 
 .info {
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  background: #fcfdfe;
-  padding: 1.5em;
-  border-radius: 0.2em;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   text-align: center;
-  border-top: solid 0.3em #739f3d;
+  color: #fff;
 }
 
 legend {
@@ -469,6 +464,43 @@ legend {
 }
 
 /* radio input */
+.animated-form {
+  background-color: darkslategrey;
+  border-radius: 0.2em;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  color: #ee693f;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em;
+  width: 600px;
+  -webkit-border-radius: 0.2em;
+  -moz-border-radius: 0.2em;
+}
+.animated-form .form-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5em;
+}
+.animated-form .form-group__input {
+  visibility: hidden;
+  transition: border 450ms;
+  transition-timing-function: ease-in-out;
+}
+.animated-form .form-group__leaf {
+  width: 60px;
+  height: 80px;
+  transition: transform 450ms, opacity 450ms;
+  transition-timing-function: ease-in-out;
+}
+.animated-form .form-group__leaf:hover {
+  transform: scale(1.4);
+  cursor: pointer;
+}
+.animated-form .form-group__leaf:checked {
+  opacity: 0.4;
+  border: solid 0.5em red;
+}
 #buddha {
   height: auto;
   width: 100%;
