--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -3,5 +3,26 @@
   background: -webkit-linear-gradient(to right, #e78e52, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #e78e52, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   flex: 1;
-  padding: $padding;
+  padding: $padding-large;
+}
+
+// small screens
+@media (min-width: 320px) and (max-width: 480px) {
+
+  //CSS
+  #sidebar {
+    flex: 1;
+    padding: $padding-small;
+  }
+
+}
+
+// tablet
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+  //CSS
+  // more padding and center content
+  #sidebar {
+    padding: $padding-medium;
+  }
 }
