--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,6 +8,9 @@ $space-white: #f0f1dc;
 $light-gray: #efedfc;
 
 /* white space */
+$padding-small: 0.5em;
+$padding-medium: 1em;
+$padding-large: 2.5em;
 $padding: 2.5em;
 $margin: 0.5em;
 
