--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -6,5 +6,14 @@
 }
 
 .img-container {
-  max-width: 450px;
+  max-width: 250px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+  //CSS
+  #buddha {
+    display: none;
+  }
+
 }
