--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -2,8 +2,26 @@
   // background-image: url("https://previews.123rf.com/images/lovender/lovender1803/lovender180300049/103605791-shamrock-pattern-seamless-vector-background-green-leaves-on-light-green-backdrop.jpg");
   background-image: url(../../public/img/leaves.png);
   flex: 2;
+  // set height to available space
 }
 
-// path is correct but sass won't load image.
-// background-image: url(../../img/leaves.png);
-// ../public/img/leaves.png
+// mobile
+@media (min-width: 320px) and (max-width: 480px) {
+
+  //CSS
+  #content {
+    flex: 2;
+  }
+
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+  //CSS
+  // more padding and center content
+  // reduce font size
+  #content {
+    padding: $padding-medium;
+  }
+}
