--- a/src/sass/layout/_wrapper.scss
+++ b/src/sass/layout/_wrapper.scss
@@ -1,5 +1,23 @@
 /* wrapper */
 #wrapper {
   display: flex;
-  padding: 0;
+}
+
+// mobile devices
+@media (min-width: 320px) and (max-width: 480px) {
+
+  //CSS
+  #wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+}
+
+// tablets
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+  //CSS
+  // more padding and center content
+
 }
