added styles for customize quote menu

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@ imports
 @import 'base/typography';
 
 @import 'components/buttons';
+@import 'components/customization';
 @import 'components/forms';
 @import 'components/lists';
 @import 'components/media';
