--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -155,6 +155,25 @@ legend {
   cursor: pointer;
 }
 
+.customization {
+  background: white;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  padding: 2.5em;
+  background-color: #739f3d;
+  color: white;
+  visibility: hidden;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .customization {
+    padding: 0.5em;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .customization {
+    padding: 1em;
+  }
+}
 /* radio input */
 .animated-form {
   background-color: darkslategrey;
@@ -282,7 +301,6 @@ legend {
 /* wrapper */
 #wrapper {
   display: flex;
-  height: 100vh;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
