--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -4,6 +4,7 @@
   background: linear-gradient(to right, #e78e52, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   flex: 1;
   padding: $padding-large;
+  height: 100%;
 }
 
 // small screens
