--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,14 +22,14 @@ $no-border: 0;
 
 /* typography */
 $font-size: 18px;
-$primary-font: "Adamina", Arial, Helvetica, sans-serif;
-$secondary-font: "Dosis", Arial, Helvetica, sans-serif;
+$primary-font: "Pacifico", Arial, Helvetica, sans-serif;
+$secondary-font: "Questrial", Arial, Helvetica, sans-serif;
 $font-color: #515353;
 $headings-color: #0d0d0d;
 $text-center: center;
 
 /* buttons */
-$button-width: 150px;
+$button-width: 48%;
 $default-cursor: auto;
 
 /* UI controls */
