--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -17,6 +17,7 @@ blockquote {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 h4 {
@@ -36,9 +37,10 @@ h4 {
 .main-heading:after {
   display: block;
   content: "";
-  width: 35px;
+  width: 45px;
   border-bottom: solid 0.2em #739f3d;
   border-radius: 0.2em;
+  margin: 0 auto;
 }
 
 .text-center {
