--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,9 +1,8 @@
 /* button */
 .button {
   width: $button-width;
-  padding: 0.5em;
+  padding: 0.6em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin: 0.2em;
   transition: all 1s cubic-bezier(.25,.8,.25,1);
 }
 
@@ -21,13 +20,13 @@
   background: #54831c;
 }
 
-.ghost {
+.light {
   border: solid 0.1em #f0f1dc;
   background: #f0f1dc;
   color: $secondary-color;
 }
 
-.ghost:hover {
+.light:hover {
   background: $secondary-color;
   color: #f0f1dc;
 }
