--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -2,6 +2,7 @@
   // background-image: url("https://previews.123rf.com/images/lovender/lovender1803/lovender180300049/103605791-shamrock-pattern-seamless-vector-background-green-leaves-on-light-green-backdrop.jpg");
   background-image: url(../../public/img/leaves.png);
   flex: 2;
+  height: 100%;
   // set height to available space
 }
 
