--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,8 +2,8 @@
 .button {
   width: $button-width;
   padding: 0.6em;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  transition: all 1s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 1s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .button:focus {
@@ -13,7 +13,7 @@
 .active {
   background: $primary-color;
   border: solid 0.1em #739f3d;
-  color: #C9FFBF;
+  color: #c9ffbf;
 }
 
 .active:hover {
@@ -33,4 +33,8 @@
 
 .button:hover {
   cursor: pointer;
+}
+
+.save {
+  margin-top: 1em;
 }
