--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -7,7 +7,7 @@ $timing-function: ease-in-out;
 .animated-form {
   background-color: darkslategrey;
   border-radius: 0.2em;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   color: $secondary-color;
   display: flex;
   flex-direction: column;
@@ -27,21 +27,9 @@ $timing-function: ease-in-out;
       transition: border $transition-duration;
       transition-timing-function: $timing-function;
     }
-    // leaves
-    &__leaf {
-      width: 60px;
-      height: 80px;
-      transition: transform $transition-duration, opacity $transition-duration;
-      transition-timing-function: $timing-function;
-      &:hover {
-        transform: scale(1.4);
-        cursor: pointer;
-      }
-      // how about keeping the checked one colored and the others dimmed? // that is called proper UX
-      &:checked {
-        opacity: 0.4;
-        border: solid 0.5em red;
-      }
+
+    &__label {
+      color: maroon;
     }
   }
   .animated-form--light {
