added new borders and more custom styles

--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -1,26 +1,36 @@
 #sidebar {
-  background: #C9FFBF;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #e78e52, #C9FFBF);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #e78e52, #C9FFBF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #c9ffbf; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #e78e52,
+    #c9ffbf
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e78e52,
+    #c9ffbf
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   flex: 1;
   padding: $padding-large;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-right: solid 0.5rem $secondary-color;
+  border-left: solid 0.5rem $primary-color;
 }
 
 // small screens
 @media (min-width: 320px) and (max-width: 480px) {
-
   //CSS
   #sidebar {
     flex: 1;
     padding: $padding-small;
   }
-
 }
 
 // tablet
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
   //CSS
   // more padding and center content
   #sidebar {
