--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -4,21 +4,18 @@
   flex: 2;
   height: 100%;
   // set height to available space
+  border-right: solid 0.5rem $primary-color;
 }
 
 // mobile
 @media (min-width: 320px) and (max-width: 480px) {
-
   //CSS
   #content {
     flex: 2;
   }
-
 }
 
-
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
   //CSS
   // more padding and center content
   // reduce font size
