--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -29,7 +29,7 @@ $headings-color: #0d0d0d;
 $text-center: center;
 
 /* buttons */
-$button-width: 48%;
+$button-width: 200px;
 $default-cursor: auto;
 
 /* UI controls */
